--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,17 @@
     justify-content: center;
     align-items: center;
 }
+
+.color-circle {
+    width: 50px;
+    height: 50px;
+    border: 2px solid #d8d8d8;
+    border: 50%;
+}
+
+.btn-circle {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+}
